# cotw-mod-builder

./: .gitignore  LICENSE  README.md  modbuilder.spec  pyproject.toml  requirements.txt  setup.cfg
deca/: errors.py  fast_file.py  fast_file_2.py  ff_adf.py  ff_rtpc.py  ff_sarc.py  ff_types.py  file.py  hashes.py  path.py  util.py
modbuilder/: __init__.py  adf_profile.py  gui.py  logging_config.py  logo.py  modbuilder.spec  mods.py  mods2.py  name_map.yaml  party.py  widgets.py  xlsx_cell.py
modbuilder/plugins/: clean_scope_lenses.py  complex_template.py  decrease_hunting_pressure.py  decrease_wobble.py  enhanced_endurance.py  enhanced_haggle.py  enhanced_impact_resistance.py  enhanced_improvised_blind.py  enhanced_keen_eye.py  enhanced_pack_mule.py  enhanced_soft_feet.py  increase_cash_reward.py  increase_deployables.py  increase_diamond_spawns.py  increase_level_progression.py  increase_rare_furs.py  increase_render_distance.py  increase_reserve_population.py  increase_speed.py  increase_weapon_fov.py  increase_weapon_magazine.py  increase_xp_reward.py  modify_ammo.py  modify_animal_aggression.py  modify_animal_senses.py  modify_atv.py  modify_backpacks.py  modify_binocular_overlay.py  modify_binocular_zoom.py  modify_dog.py  modify_dog_fur.py  modify_lures.py  modify_multi_trophy_mount_cost.py  modify_player_gravity.py  modify_player_traits.py  modify_respec_cost.py  modify_resting_cost.py  modify_reticle_cost.py  modify_scope_zoom.py  modify_skills.py  (+6 more)
modbuilder/saves/: All Ammo - Class 1-9.json  (+5 more)
scripts/: build.bat  build.sh  pack.bat  pack.sh  version.bat
(+924 files in other folders)
